# cv_hand_controller

./: CMakeLists.txt  README.md  environment.zsh  package.xml  requirements.txt  run.sh  stereo_calibration.yaml
calibration/: side_camera_intrinsics.yaml  stereo_calibration.yaml  top_camera_intrinsics.yaml
cv_hand_controller/: camera_node.py  ik_bridge_node.py  node.py  triangulation_node.py
launch/: cv_hand_controller.launch.py
msg/: FingerPoints.msg
scripts/: cv_hand_controller_node.py  intrinsic_calibration.py  stereo_calibration.py
