<package format="3">
  <name>cv_hand_controller</name>
  <version>0.0.0</version>
  <description>Computer-vision based hand controller for a robotic end-effector</description>

  <maintainer email="owenpark@umich.edu">Owen Park</maintainer>
  <license>GPL-3.0</license>

  <depend>rclpy</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>


</package>

